# grade_company_kyb

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  KYB Assessment.postman_collection.json  README.md  docker-compose.yml  pyproject.toml  security.md  wait-for-it.sh
backend/: .env.sample  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: ba8a4db7c313_init.py
backend/src/app/api/: compnay_profile.py  logs.py  security.py
backend/src/app/core/: config.py
backend/src/app/models/: audit_log.py  document.py  (+1 more)
frontend/: .env.production  Dockerfile  package-lock.json
frontend/app/: globals.css  layout.tsx
frontend/app/admin/: layout.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts  auth-context.tsx
migrations/: env.py
migrations/versions/: 01380f66d0d7_add_kyb_data_to_company_profiles.py  193e5ac23d0c_add_class_type_to_documents.py  65c88947dcac_init.py  8b5bfe2f5de8_init.py  d2940a5df1ce_initial_schema.py
notebooks/: audit_log.json  clssification.ipynb  file_genration.ipynb  final_kyb.json  kyb_app.py  valet-test.ipynb
src/app/: main.py
src/app/api/: compnay_profile.py  documents.py  health.py  security.py
src/app/core/: auth_dependencies.py  config.py  db_dependencies.py  logging.py  security_utils.py
src/app/db/: session.py
src/app/models/: compnay_profile.py  document.py
src/app/repositories/: compnay_profile_repository.py
src/app/schemas/: compnay_profile_schema.py
src/app/services/: file_upload.py  ingestion_service.py  kyb_generation_service.py
src/app/utils/: file.py  misc.py
(+23 files in other folders)
