[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kyb-app"
version = "0.1.0"
description = "Python Project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "uvicorn",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "python-magic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pydantic",
    "bcrypt<4.0.0" 
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]